[package]
name = "lariv"
description = "Linked Atomic Random Insert Vector: a thread-safe, self-memory-managed vector with no guaranteed sequential insert."
license = "MIT"
authors = ["Guillem L. Jara <4lon3ly0@tutanota.com>"]
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/Alonely0/Lariv"
repository = "https://github.com/Alonely0/Lariv"
readme = "./README.md"
keywords = ["vector", "atomic", "ring", "buffer", "thread-safe"]
categories = ["concurrency", "data-structures", "database-implementations", "memory-management", "rust-patterns"]

[dependencies]
aliasable = { version = "0.1.3", features = [
    "aliasable_deref_trait",
    "traits",
    "stable_deref_trait",
] }
once_cell = "1.17.0"

[dev-dependencies]
dashmap = "5.4.0"
criterion = { version = "0.4.0", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "lariv"
harness = false
path = "./benchmarks/bench.rs"
